--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,21 @@
       "source": "/api",
       "destination": "/api/index"
     }
-  ]
+  ],
+  "redirects": [
+    { 
+      "source": "/", 
+      "destination": "/infographic.html", 
+      "permanent": false 
+    }
+  ],
+  "routes": [
+    { "src": "/api", "dest": "/api/index.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
