--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,9 @@
 {
-  "rewrites": [
-    {
-      "source": "/api",
-      "destination": "/api/index"
-    }
-  ],
-  "redirects": [
-    { 
-      "source": "/", 
-      "destination": "/infographic.html", 
-      "permanent": false 
-    }
-  ],
+  "version": 2,
   "routes": [
     { "src": "/api", "dest": "/api/index.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ],
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "cleanUrls": true,
+  "trailingSlash": false
 }
