1. Created a root page handle in the API folder 2. Updated the vercel.json configuration 3. Added proper page routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "version": 2,
   "routes": [
+    { "src": "/", "dest": "/api/page.js" },
     { "src": "/api", "dest": "/api/index.js" },
+    { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "public",
   "cleanUrls": true,
   "trailingSlash": false
 }
